--- a/demo/test_train/train-cspider-2jrayxos.ipynb
+++ b/demo/test_train/train-cspider-2jrayxos.ipynb
@@ -788,6 +788,7 @@
     "learning_rate = 1e-5\n",
     "args = Seq2SeqTrainingArguments(\n",
     "    \"test-summary\",\n",
+    "    output_dir=\"/root/autodl-tmp/checkpoints\",\n",
     "    evaluation_strategy = \"epoch\",\n",
     "    learning_rate=learning_rate,\n",
     "    per_device_train_batch_size=batch_size,\n",
