--- a/demo/test_train/test_llama_board.ipynb
+++ b/demo/test_train/test_llama_board.ipynb
@@ -27,7 +27,7 @@
     }
    ],
    "source": [
-    "!git clone https://github.com/tking007/LLaMA-Factory.git"
+    "!git clone https://github.com/tking007/test_llama_board.git"
    ]
   },
   {
@@ -1070,6 +1070,28 @@
      ]
     }
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "\n",
+    "# !CUDA_VISIBLE_DEVICES=0 python src/train_web.py\n",
+    "!CUDA_VISIBLE_DEVICES=0 USE_MODELSCOPE_HUB=1 python src/train_web.py\n",
+    "Running on local URL:  http://0.0.0.0:6006\n",
+    "\n",
+    "Could not create share link. Missing file: /root/miniconda3/lib/python3.8/site-packages/gradio/frpc_linux_amd64_v0.2. \n",
+    "\n",
+    "Please check your internet connection. This can happen if your antivirus software blocks the download of this file. You can install manually by following these steps: \n",
+    "\n",
+    "1. Download this file: https://cdn-media.huggingface.co/frpc-gradio-0.2/frpc_linux_amd64\n",
+    "2. Rename the downloaded file to: frpc_linux_amd64_v0.2\n",
+    "3. Move the file to this location: /root/miniconda3/lib/python3.8/site-packages/gradio\n",
+    "^C\n",
+    "Keyboard interruption in main thread... closing server."
+   ],
+   "metadata": {
+    "collapsed": false
+   }
   }
  ],
  "metadata": {
